--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "node-html-parser": "^3.3.4"
   },
   "scripts": {
+    "start": "yarn run serve",
+    "serve": "ts-node src/index.ts",
     "tsc": "tsc"
   },
   "devDependencies": {
